finish of ooad ass

--- a/BookstoreM3/frmMain.resx
+++ b/BookstoreM3/frmMain.resx
@@ -118,28 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnCategory.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAA6tJREFUaEPt
-        WklrFEEYbVcw7iLught4EAQV9OBy0oPiBlHQixf1BwQFvQjeREUEF1RU1IMKuQiKeBANSAgxU12TiSYi
-        brggCqIoKu7xfVVfTTrVJaS7x8pkmAeP7vre1931uvur7uqZoIq+hc5+QdA2ujvFSBYZnf3jOc0jWCwH
-        1A8IgvAR2OngNZ1TGIr115bGlOd1Tq+Dzqqrg0TxUucUprt1xVad0+uoTCNfwPfgN912GvkMUs53bpeb
-        EXFGFz1BDMK93+gwckC3CU1D0L5XhkbCK+j4zCDIzQBno12IG6HCVjrYOgexJ2DEiKjp0g1bprLIaBiI
-        +EJsVweeBWexkBWlqpGWCVinW86VcxwnYReWt0C6NaPaSb19ZpTKSLjAikf5wxEzfKC3zwwvRiT4y4pF
-        KCfpfWTCfzHyEXwOms7fBlFzRf0ZeAPkKyU26n1kQqmN0DY0ohHkVs6BEXGE1692jY7hUY4d0+1MKPkV
-        +aBHJRqxwoMcgxFZy+t0m81FewOWdGUohmE8M7zUCIw0jcHytxU3/IN+jNf7SQ1fRlQOPUBdOkhXKBO8
-        GkEtOHUi6iUTfBqh0cmpE9t0Tmr4NFIYh3XUgzMHcTFW56WCTyOEsMPSIhTrOSkNfBsRJxy64WFOSgPf
-        RuQmh26IZ0xqeL8iEx26IZ4z+VGcmBRFI1Rs97EUIH+MiBmhdyeMLirHPJVdRl7puJlpRo0Qwsc6Lt/g
-        GDuxvhrLhzqWW8VJSVE0gteJKOilzjYidus2gd6X5F3ELSPiqZ48EeRmHYsZoQkVxSM1EV7m2H4OJEXR
-        yB2cjRU4+HJwpe6QbUReZx0M12CJMxq7Ipg40VNa5WFGqWKWEbmF45/Ac2g3YGmG5WZOSgrfNUIoTHHk
-        GP7UfUqM3jBCKNaYg2IJJyVB43D3zhRf6Jz8NIfGFHmdI+a7dUXM1W2IC448MncKWg0nJYWa4NyMU+zQ
-        OhWvKlBHTrhd59BkSl506CA9O2zk5iGOmqNjk946mYWegjYwBdsnuCwI2gdz5w1oyAzfgfYlLXPKfWzA
-        QN0ijsSyJ27rbqgYI+q3kH/NB8qY8jQbiCLcC6G+bzG3mDtf8aCaoXl0lHIti55An0vtPohFLPYU7cPi
-        92P4lkVPyK+L90FcYrGnqBopIapGoqgYI+oB+dXaUQeLnhAutY5PTPP5lH7f67aTOhY8gd5s1QcNc3z6
-        8QeTtMSgqyK2YWOaF9Ry0DPUf1/2gIdSmqiiimwIgr/uvl/DJcDGtgAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAXNJREFUWEft
+        188qRVEUx/HtT4mZFzDwAFIeQMnAgBSZmGCgZMBQZiZK8QJkIEMDBt7ByMCIiDIQRiIkE8t37bOujtN2
+        Su197h3cX33q3Ns+Z697/qyzr3NO7iAlLhmUMn6SVQwHrOHdBqaKL2DEPlikE/tYRCUFjGEOLWjDEe6x
+        gEIB0oWBeLIClvGGPezgBf2YQLEA3VH3iSTb4BL4A+uv/sSQTRYqQM9Qdzw/BfiD92A029aECogeX8A6
+        pgI2kbyAKzyVOLOBzaSKzGOjxKwNTBX5gt4HpwHXoD8kTf4xzEd6UdljqI2o1b4gMogPVPYyWsIF+swz
+        djGJYifUM3MQT1bAOA7xigccox2hVqzdcjueX5dAtnAC3nh+sirvgVqkwzZINQXoY6in/SbgEckfwxms
+        lJi2gc2kitxCb8S/nNvAVPGTNNqyvJa69IF8gp2QPuHbcST/LyDVsjyUhjwD0eMLqOuyXP8N2fUIYlmW
+        Ks59A19TP7RypC9BAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btnSetting.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnlogout.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACMAAAAjCAYAAAAe2bNZAAAABGdBTUEAALGPC/xhBQAAAttJREFUWEft
         VzmLFEEYLQ28IgXB+y9o4oXiBYYeoJGBmeIRaaLgLzBQPNFF1EAzjQwEj8AjkHW3qkdXV9AVETT1xEC8
@@ -155,6 +146,72 @@
         ntIKTIzk2dS/FH7DPZsIn7jk1C7aRSmaE2DHKfkmv3hq4y7j21VPbaLjfQbznXef4a5hMYw3vjY/SeX7
         TMT/uukxbm2MqjtwGdxydQZrItYLThl/U8jbZYHrCtL/JncObWxxPn272/9NxKj5oyTcPqyNK+1Cfhxj
         Fsb8BltcZPSogjQqAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="picuser.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAkGBxASEhIQEBIPEBAPDxUQEBAOFQ8QEBAVFREXFhYRFhcY
+        HSggGBolGxUVITEhJykrLi4wFx8zODMsNygtLiv/2wBDAQoKCg4NDhsQEBorHh8mLS0tLS0tLS0tLS0t
+        LS0tLSsrLS0tLSstLS0tLS0tLS0rLS0rLS0tLTgtLS0tLS0tLSv/wAARCADMAMwDASIAAhEBAxEB/8QA
+        HAABAAEFAQEAAAAAAAAAAAAAAAQBAgMFBgcI/8QAQBAAAQMCAwQHBgMHAwUBAAAAAQACAwQREiExBUFR
+        cQYHEyJhgZEjMqGxwdEUUnJDYoKSorLwM0LhJHODo8II/8QAGQEBAAMBAQAAAAAAAAAAAAAAAAIDBAEF
+        /8QAIhEBAQACAgEFAQEBAAAAAAAAAAECEQMSIQQiMTJRQROx/9oADAMBAAIRAxEAPwD3FERAREQEREBE
+        Wr25t6mpWEzTQROwEsZM9rC8gG2Wtr7wCg2igbT23S01vxE8MJdm0Sva0nxAOa8I2z1ubTqGlsQipGnK
+        8IL5P53fQLgqhrpHmSRzpJHm7nyEve4+JOZVd5JFk4rX0dtzrQ2XTtDmy/inE27OlwvcP3jcgW81zs/X
+        lSAHDSVjnbg4wNHmQ429F4xHCsn4a6rvMtnC9Pn69XlgMdCGyCTNr5cbHR2N7ODQWuvbcQux2f1tbIkj
+        xvnMDrAujma8OB3gWFncwvnqaCy1tSpY8lqOfHI+w9jbXp6uIT00rJonZBzDexGoPA+CnL5L6EdLK7Zz
+        nupXNwSgY4pQXRuI0fa+Tt1wvoXoB06g2jG1ri2OtbHimgFxobF7L6tzB8Lq3cU9a69ERdcEREBERARE
+        QEREBERAREQEREEbaVfFTxSTzODIomF73HcB9V8mbZnE9VUTgyPbLM97HT5yYS67QeQytwsveevGZ7dn
+        Wa5oa+ojbICbOcMyAOOYBPJeEQRKnlz14X8OG/KyOJS4qdZoYlNiiWW5NcxRo6ZXviAClOIC2OyuitdW
+        StjZDLFGbF80zHMjY054hitiy0AXMZcqZZTGONr5QLrXRQ4jcr0jpz1fx7PpXSyTGWSWpEcDQLdwZ3ce
+        NgSbeA4lcZTQZLT9IzfeqQUy2OwdrGiqoKpov2Ml3Af7mEYXj+UlRi6yg1Juq5l5W3CafXNJUslYyWMh
+        zJWNkY4aFrgCD6FZlwPUlWySbMY1+kEr4Y3cWA3A8sVvILvlrl3GKzV0IiLrgiIgIiICIiAiIgIiICIi
+        DyX/APQVP7GjmubMnewtvl32XxW4jDbzK8iinAtr4L6a6WgGNjXNa4F+YcAdB4rSwUkRc15jYXsvgcWi
+        7b624aLLzWdmrh31eT7D6M1tSA6KBzWHSSe8TDyvmeYC2zer7abm3tA04g0NL7mxNi8kDQar1mIqSwqv
+        GRZllk5nop0CpqUB81qmo1xyDuMPBjfqc+S7VpUZrlla5X41ny8tL086NjaFI+AYWzNIkgkcL4HtINuT
+        gC0/qXzjLjic6KRpZJG4se12Ra4GxBX1XiXAdZXQNlY11VBZlYxtzubUNaPdd+9YZHyTOdolx5da8Oc+
+        6wvCvb45Eag6jwV7I7rO017V1Bk/g6gE3AqshwvG269PXEdT2zhFs5j7WdUSPlJ4jFhb8Grt1tw+sYM/
+        tRERSREREBERAREQEREBERAREQc30tf3ohxDz6Fo+q11M5S+lz/axjhHf1cfstfTuWHmvvrZxT2RtY3K
+        SxygROUhj1CVKxNa5ZA5RGvWQPVsyQuKTjTEsGNUdJbPhmu9ker5hr7CeYbhPIP/AGFdx1e9Fm1JM8wv
+        BEbBu6V/D9I3rgpsT534QSZKh4brYl0hsPivofY2z201NFTt/ZxgOP5nHNzjzJKhlPK2XwnbNqTHIxjb
+        BjiGYRk0bhYbrLply2yoS+ZvBnfJ4W0+P1XUrTw76svLrsIiK1WIiICIiAiIgIiICIiAiIg5Hpf/AKzD
+        xjHwc77rXQOW26asN4Xbu+3zOEj5FaSFywc/3rbw/WNjG9SGPUJjlla9VbW6TmvWQPUNr1ka9d7I6Ssa
+        Fyjh6o6Rd7HVQwRDRkYtpZrcvgscrychmSbABWSTKTsBmOa+5jS7zOQHxPou4e7KRHL2zbdbLouyZY++
+        7Nx+imoi9CTU1GK3fkREXXBERAREQEREBERAREQEREGo6UU2OncRrH7TyHvfC58lxsDl6Q5oIIOYIsV5
+        5tClMMro9wN2+LTof84LL6jH+tHBl/Gdjlla5RY3LO0rI1M7Srw5YWlX3XHWQvWJ8ise9Yi5dB7yum6N
+        U2GLGdZDcfp3euq5GslsLD3nZDw4ldvsM/8ATw2ywxhv8ow/RafT4+ds3PfGk5ERbGUREQEREBERAREQ
+        EREBERAREQFpOlGze1j7Ro9pEL5aubvH1W7RcyxmU1Xcbq7eawyKUx6kdJ6aOOUmK+gdK0aMLjlbnw+6
+        11PM12hHLf6Fefnx3G6rbhnMpuJ7XKpcrWMKuc22uXPJV6WbY3FYnvDRc/8AJ8Ajqluje+fDT1+yvpqN
+        zzid/wADkpzFG5I8EJccTvLwHBdvsI+xaN4xXHDvm3wWmiorWGn0HFbKmmDHDc22Ejw4+X3Wr0+F85Mn
+        PySaxbdERaFQiIgIiICIiAiIgIiICIiAiKPVVjIx3jnuaM3HyQSFqtq7YbGCyOzpPVrPE+PgoFdtOSTu
+        t9mzgPePM7vJQWQKcx/VWXJ+LaOn7QSh9z2hsSddNfU3Wkm2aQS0jNpsV02z25fxH5qTWUHaDE22MC36
+        hwVfPx9pufMT9Py9Lq/Fcgyidxd6lSotnE63PPNbZkNjYixGoKlxRhefu/D0fHyhUezQNy2scIGgzWWO
+        I8uevornWC08fBb5y8MvLzzHxj5rE7LnvUaU3yGpNlllcraOxJcdBk07vErdJqajBbbd1maXN90ltuBy
+        9DkpEW0XD3xccW5H0VrmrE5i5ZHZlY2sMzXC7SD8xzG5ZFobEG4JB4jIqXT7SIykH8TfqPsoXFbjyS/L
+        ZorWPBFwQQd4VyisEREBERAREQFgqKtjNTn+UZlKyYtbl7xyHh4rVti/wqUx2hnnpfUV8jsm9wervXco
+        PY7zmTqTmT5qeIlXslZJpTbb8oIhWRsKl9mqhiOIFM2znN4Ov65/dSqyvigjMsz2xsG87/ADUlY6uCS+
+        KLDithIde3gcuC4/rL2aRs+SR8hfOHxlpN9MWbGAaZEnyXcZuyI5XU2ibW6xY3SN7Ng7NjgTj9+QcDb3
+        R4Lvdi7RgqImzQEYHagWBad7SNxC+Y2ucTYNcScrAG69t6t+j9RR05mkcS+Y4nQg3a1g0/j3/BaObDjx
+        k6zyo4cuS29ruf8AHdPcosrlcZ2kYgcjvOSjAuebMHNx90fdZmlYQXHCNTqeA4qc2IAADQZK+npgwZZk
+        6k6lXkII9iNMvknacRbxGiyuasbmoKFt9FjcxVLbaZck7TiPMfZBjje5hu024jceYWzpdoNd3Xd13wPI
+        /Ra9xG7Plqo0wPLwGa5ZKljnY6VFr9jVGJmEm5ZlnmSNy2CqvhfLubEREdEREECsN3W4D5/4FRjUebuJ
+        8Ve1Wz4ZsrulkwqqLri3Cq4VVECy8o61duY520rD3YBifbfI4aeTbepXpu1q9tPDLO/3YY3PPjYZDmTY
+        ea+bq3aDpZHyvN3yPL3cybrV6XH3dvxk9XfZ1n9bCjkvIwcXtHxX0Fs0eyZ+lfN9BN7WP/uN/uC+kNnf
+        6bOSl6u7sR9Fh1xqv4GO+LCL6qQABoiLG2iEIiC0hWFqyqhCCOWrG9qkkK1jc+XzP+fFBjbBh5nU/Tko
+        8zVsHhRJmoI+z5sEng4YT9Fu2zgrnpRbPhmpzXb+KhnF3HfGm4DlVQqaRTAVBYqiK15yPJBr2OWUKFHI
+        s7ZFcys6LGHq8OQVRLog8267Nt9nBFSNPeqHY32/Iw/V1vReMCVb7rO2z+J2jO4G7ISKePlHe/8AUXFc
+        tjW3i9uLPyY9q2NJL32frb/cF9PbIPsWfpXynHLYg8CD8V9T9Hn3p4zxaPkqvUXdifFjqVsURFnWiJdU
+        ugqitLlaXoLyqR7+fyyWMvV0J7vr8ygyFR5WrMXqNNIghzhZaV12jwyUad6zbIYXYsja4z3clHL4T475
+        bCmC2DQsMMFlnVa8QhEQa2poCM49Py/ZQu0IyORG4rfrFPTsf7wB8d481OZK8uP8alsqyNlV02yyM2Ov
+        4O19VEkje33mkeOo9VKWVVcbE1si1/SbawpqSpqN8MD3NHF1rNHm4hXNmXB9dO1MFC2EHOomaD+lnePx
+        AUsZu6ceHOkJJLjck3JOpJ1KpiVFRbEVxcvqfodNipITxjaf6QvlZfSnVxU4qCnN/wBiz+2yo5v47HWu
+        edwv52WJ0km5n9TVa2XM58FXtvFUurS6b8jRzIVWxzHUsbyu4p2/iqdt4oKuu02JvkOAVpkWCaXPyCwm
+        VBKMiuimytwJ+d/qobS53ugnkCVlio5iT3SAeNgmzVrI+dR5Jr5DVTotkE++63g37lbCnpGM90C/E5n1
+        UblE5x2tVS7Kc7OTut/L/uP2W5jja0ANAAGgCvRQt2txxkERFxIREQEREBERBhkpY3atbz0K5Xpj1e0u
+        0RH2kk8RixYDE5tu9a5IcDfQLsEXZlZ8OdY8WrOoc/sa/k2WC/8AU1/0Wqm6ja8e7UUj+fatPyK9+RWf
+        7Z/qPTF86P6l9qjT8Kf/ACEf/K9S6D9GqulpY4JhGHsGE4HYh7xtnbhZdyi5ly5X5P8AONKdnS/u+qqN
+        mS8WD1+y3KKPan+caluynb3gcgT9Vlbskb3uPKwWxRO1OmKE3ZkW8E8yVnZSRjRjfS6zIubqWoAIiLjo
+        iIgIiICIiD//2Q==
 </value>
   </data>
   <data name="btnReport.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -234,4 +291,7 @@
         W5oomf+FDqP2GuOuyEkHN8vibrnfw0ULOPleJxeBQMA3It/8ob7TXAOi6AAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
